# VideoReceiver

Receiver-QDeque/Apps/MainInterface/: CMakeLists.txt
Receiver-QDeque/vacClass/vacReceiver/: CMakeLists.txt  vacReceiver.cpp  vacReceiver.h
Receiver-QMutex/: CMakeLists.txt
Receiver-QMutex/Apps/: CMakeLists.txt
Receiver-QMutex/Apps/MainInterface/: MainInterface.cpp
Receiver-QMutex/vacClass/: CMakeLists.txt
Receiver-QMutex/vacClass/vacReceiver/: vacReceiver.cpp  vacReceiver.h
